@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [APEX] Use the page_token parameter to prevent duplication of logs
 ### Fixed
 - [WORKFLOW] Silent error when saving a new worflow
+- [FRONTEND] [API] Correctly return Frontend information when Reputation Contexts are set
 
 
 ## [2.15.2] - 2024-04-02
